<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MovieDetailsActivity"
    android:id="@+id/movieDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop"
            android:alpha="0.4"
            android:src="@drawable/main" />

        <ImageView
            android:id="@+id/imgView1"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/movie"/>

        <TextView
            android:id="@+id/txtWatchNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_now"
            android:layout_below="@id/imgView1"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"
            android:textColor="#F4511E"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txtWatchNow"
            android:layout_below="@id/imgView1"
            android:layout_marginStart="60dp"
            android:text="@string/rate"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/imgThumbsUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thumbs_up"
            android:layout_below="@id/imgView1"
            android:layout_toEndOf="@id/txtRate"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/imgThumbsDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thumbs_down"
            android:layout_below="@id/imgView1"
            android:layout_toEndOf="@id/imgThumbsUp"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/btnLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/unlike" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/txtWatchNow"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontalLine"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/movie_name"/>

        <TextView
            android:id="@+id/txtMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movieName"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMovieName"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/released"/>

        <TextView
            android:id="@+id/txtReleased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/released"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtReleased"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDescription"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/genres"/>

        <TextView
            android:id="@+id/txtGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genres"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtGenres"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/cast"/>

        <TextView
            android:id="@+id/txtCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cast"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCast"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/directors"/>

        <TextView
            android:id="@+id/txtDirectors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/director"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/metascore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDirectors"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/metascore"/>

        <TextView
            android:id="@+id/txtMetascore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/metascore"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text=""/>

        <TextView
            android:id="@+id/boxoffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMetascore"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/boxoffice"/>

        <TextView
            android:id="@+id/txtBoxoffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/boxoffice"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            android:text=""/>

    </RelativeLayout>
    </ScrollView>
</FrameLayout>